--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,11 +5,6 @@
 .main {
   min-height: 100vh;
   padding: 4rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 .footer {
@@ -28,61 +23,59 @@
   flex-grow: 1;
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
 .grid {
+  display: grid;
+  grid-template-columns: repeat(3, minmax(150px, 100%));
+  align-items: stretch;
+}
+
+.grid > .itemA {
+  width: 100%;
+}
+
+.grid > .itemB {
+  width: 100%;
+  grid-column: auto;
+}
+
+.grid > .location {
+  grid-row: 1;
+  grid-column: span 2 / span 2;
+}
+
+.grid > .weather {
+  grid-row: 1;
+  grid-column: 3;
+}
+
+.grid > .screenshot {
+  grid-column: span 3;
+}
+
+.inputGrid {
+  display: grid;
+  grid-template-columns: auto auto;
+  align-items: stretch;
+}
+
+.input { 
   display: flex;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  max-width: 800px;
+  min-width: 25%;
 }
 
 .card {
-  margin: 1rem;
-  padding: 1.5rem;
+  margin: 1rem 0.5rem;
+  padding: 1rem;
   text-align: left;
   color: inherit;
   text-decoration: none;
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+  max-width: 100%;
 }
 
 .card:hover,
@@ -93,25 +86,28 @@
 }
 
 .card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
+  margin: 0 0 0.5rem 0;
+  font-size: 1.25rem;
 }
 
 .card p {
   margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
+  font-size: 1rem;
 }
 
 @media (max-width: 600px) {
   .grid {
-    width: 100%;
-    flex-direction: column;
+    grid-template-columns: repeat(1, minmax(150px, 100%));
+  }
+
+  .grid > .location {
+    grid-column: auto;
+    grid-row: auto;
+  }
+
+  .grid > .weather {
+    grid-column: auto;
+    grid-row: auto;
   }
 }
 
