--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -23,41 +23,6 @@
   flex-grow: 1;
 }
 
-.grid {
-  display: grid;
-  grid-template-columns: repeat(3, minmax(150px, 100%));
-  align-items: stretch;
-}
-
-.grid > .itemA {
-  width: 100%;
-}
-
-.grid > .itemB {
-  width: 100%;
-  grid-column: auto;
-}
-
-.grid > .location {
-  grid-row: 1;
-  grid-column: span 2 / span 2;
-}
-
-.grid > .weather {
-  grid-row: 1;
-  grid-column: 3;
-}
-
-.grid > .screenshot {
-  grid-column: span 3;
-}
-
-.inputGrid {
-  display: grid;
-  grid-template-columns: auto auto;
-  align-items: stretch;
-}
-
 .input { 
   display: flex;
   align-items: center;
@@ -67,12 +32,12 @@
 }
 
 .card {
-  margin: 1rem 0.5rem;
+  /* margin: 1rem 0rem; */
   padding: 1rem;
   text-align: left;
   color: inherit;
   text-decoration: none;
-  border: 1px solid #eaeaea;
+  border: 1px solid #9c9fc4;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
   max-width: 100%;
@@ -95,20 +60,18 @@
   font-size: 1rem;
 }
 
-@media (max-width: 600px) {
-  .grid {
-    grid-template-columns: repeat(1, minmax(150px, 100%));
-  }
+.formButton {
+  width: 50vw;
+  margin-bottom: 20px;
+}
 
-  .grid > .location {
-    grid-column: auto;
-    grid-row: auto;
-  }
-
-  .grid > .weather {
-    grid-column: auto;
-    grid-row: auto;
-  }
+.code {
+  background: #fafafa;
+  border-radius: 5px;
+  padding: 0.75rem;
+  font-size: 1.1rem;
+  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
+    Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
 @media (prefers-color-scheme: dark) {
