--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,8 @@
 .container {
   padding: 0 2rem;
+  background-color: #0a192f;
+  color: #8892b0;
+  font-family: "SF Mono","Fira Code","Fira Mono","Roboto Mono", monospace;
 }
 
 .main {
@@ -37,17 +40,18 @@
   text-align: left;
   color: inherit;
   text-decoration: none;
-  border: 1px solid #9c9fc4;
+  border: 1px solid #64ffdb9f;
   border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
+  transition: color 0.75s ease, border-color 0.75s ease;
   max-width: 100%;
 }
 
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+  color: #64ffda;
+  border-color: #64ffda;
+  border: 3px solid;
 }
 
 .card h2 {
@@ -60,29 +64,60 @@
   font-size: 1rem;
 }
 
-.formButton {
+.button {
   width: 50vw;
   margin-bottom: 20px;
+  color: #64ffda;
+  border: 1px solid #64ffda;
+  padding: 1.25rem 1.75rem;
+  font-family: "SF Mono","Fira Code","Fira Mono","Roboto Mono",monospace;
+  line-height: 1;
+  transition: all 0.25s cubic-bezier(0.645,0.045,0.355,1);
+  font-size: 1.2rem;
 }
 
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+.button:hover {
+  border-color: black;
 }
 
-@media (prefers-color-scheme: dark) {
-  .card,
-  .footer {
-    border-color: #222;
-  }
-  .code {
-    background: #111;
-  }
-  .logo img {
-    filter: invert(1);
-  }
+.button:before,
+.button:after {
+  border: 0 solid transparent;
+  transition: all 0.3s;
+  content: '';
+  height: 0;
+  position: absolute;
+  width: 0px;
+}
+
+.button:before {
+  border-top: 2px solid #57cbff;
+  right: 0;
+  top: -4px;
+}
+
+.button:after {
+  border-bottom: 2px solid #57cbff;
+  bottom: -4px;
+  left: 0;
+}
+
+.button:hover:before,
+.button:hover:after {
+  width: 100%;
+}
+
+.list {
+  border: 1px solid #ccd6f673;
+}
+
+.listItem {
+  color: #e6f1ff;
+}
+
+.listItemButton:hover,
+.listItemButton:focus,
+.listItemButton:active {
+  background-color: rgba(100,255,218,0.3);
+  color: #e6f1ff;
 }
