--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,5 @@
 .container {
-  padding: 0 2rem;
+  padding: 2rem 1rem;
   background-color: #0a192f;
   color: #8892b0;
   font-family: "SF Mono","Fira Code","Fira Mono","Roboto Mono", monospace;
@@ -7,7 +7,7 @@
 
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
+  padding: 4rem auto;
 }
 
 .footer {
@@ -24,6 +24,10 @@
   justify-content: center;
   align-items: center;
   flex-grow: 1;
+}
+
+.center {
+  text-align: center;
 }
 
 .input { 
@@ -120,4 +124,12 @@
 .listItemButton:active {
   background-color: rgba(100,255,218,0.3);
   color: #e6f1ff;
+}
+
+.picker {
+  /* border: 1px solid white; */
+  background-color: #e6f1ff;
+  margin: 0;
+  font-size: 0.5rem !important;
+  font-weight: bold !important;
 }
